add vee-validate i18n

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "lib": ["ESNext", "ESNext.AsyncIterable", "DOM"],
     "noImplicitAny": false,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "allowJs": true,
     "sourceMap": true,
     "strict": true,
