--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@types/node", "@nuxt/types", "nuxt-i18n"]
+    "types": ["@types/node", "@nuxt/types", "nuxt-i18n", "vue-apollo/types"]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
